# docs/swagger.yaml
@@ -16,12 +16,78 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
-
-security:
-  - bearerAuth: []
+  schemas:
+    BaseUser:
+      type: object
+      properties:
+        _id:
+          type: string
+          format: uuid
+        username:
+          type: string
+        email:
+          type: string
+          format: email
+        role:
+          type: string
+          enum: [user, author, admin]
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
 
 paths:
-  /api/admin/users/{id}/role:
+  # ------------------------ ADMIN ENDPOINTS ------------------------
+  /admin/users:
+    get:
+      summary: Gets all registered users.
+      description: Retrieve a list of all registered users in the system.
+      tags: [Admin]
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#components/schema/BaseUser'
+        401:
+          description: The user is not authenticated.
+        403:
+          description: The user does not have permission to access this resource.
+
+  /admin/users/{userId}:
+    delete:
+      summary: Delete a user by their user id.
+      description: Deletes a user from the system by their unique user ID.
+      tags: [Admin]
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: ID of the user to delete
+      responses:
+        200:
+          description: The user was deleted successfully.
+        204:
+          description: User deleted successfully
+        404:
+          description: User not found
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+  
+  /admin/users/{id}/role:
     patch:
       summary: Update a user's role
       tags: [Admin]
