# routes/admin-routes.js
@@ -9,10 +9,22 @@ router.use(authRouteProtection, authorizeRoles('admin'));
 /**
  * @swagger
  *  components:
- *      schmea:
+ *      schema:
  *          User:
  *              type: object
- *              
+ *              properties:
+ *                  _id:
+ *                      type: string
+ *                  username:
+ *                      type: string
+ *                  email:
+ *                      type: string
+ *                  role:
+ *                      type: string
+ *                  createdAt:
+ *                      type: string
+ *                  updatedAt:
+ *                      type: string
  */
 
 /**
@@ -32,7 +44,36 @@ router.use(authRouteProtection, authorizeRoles('admin'));
  *                              $ref: '#components/schema/User'
  */
 router.get('/users', getAllUsers);
+
+/**
+ * @swagger
+ * /users/{id}:
+ *  delete:
+ *      summary: Delete a user by their id.
+ *      description: This api deletes a given user by their id.
+ *      parameters:
+ *          - in: path
+ *            name: id
+ *            required: true
+ *            description: The user's uuid
+ *            schema:
+ *              type: string
+ *      responses:
+ *          200:
+ *              description: The users was deleted successfully.
+ *              content:
+ *                  application/json:
+ *                      schema:
+ *                          type: object
+ *                          properties:
+ *                              message:
+ *                                  type: string
+ *                                  example: "User JohnD deleted successfully."
+ *                          
+ */
 router.delete('/users/:id', deleteUser);
+
+
 router.patch('/users/:id/role', updateUserRole);
 
 module.exports = router;
